@@ -31,25 +31,25 @@ public class TreatmentPaymentCalculatorApplication {
 
    * @return CorsFilter
    */
-  @Bean
-  public CorsFilter corsFilter() {
-    final CorsConfiguration corsConfiguration = new CorsConfiguration();
-    corsConfiguration.setAllowCredentials(true);
-    corsConfiguration.setAllowedOrigins(List.of("http://novmik-tpc-fe.s3-website.eu-central-1.amazonaws.com:80"));
-    corsConfiguration.setAllowedHeaders(
-        Arrays.asList("Origin", "Access-Control-Allow-Origin", "Content-Type",
-            "Accept", "Authorization", "Origin, Accept", "X-Requested-With",
-            "Access-Control-Request-Method", "Access-Control-Request-Headers"));
-    corsConfiguration.setExposedHeaders(
-        Arrays.asList("Origin", "Content-Type", "Accept", "Authorization",
-            "Access-Control-Allow-Origin", "Access-Control-Allow-Origin",
-            "Access-Control-Allow-Credentials"));
-    corsConfiguration.setAllowedMethods(Arrays.asList(
-        "GET", "POST", "PUT", "DELETE", "OPTIONS"));
-    final UrlBasedCorsConfigurationSource urlBasedCors =
-        new UrlBasedCorsConfigurationSource();
-    urlBasedCors.registerCorsConfiguration(
-        "/**", corsConfiguration);
-    return new CorsFilter(urlBasedCors);
-  }
+//  @Bean
+//  public CorsFilter corsFilter() {
+//    final CorsConfiguration corsConfiguration = new CorsConfiguration();
+//    corsConfiguration.setAllowCredentials(true);
+//    corsConfiguration.setAllowedOrigins(List.of("http://localhost:80"));
+//    corsConfiguration.setAllowedHeaders(
+//        Arrays.asList("Origin", "Access-Control-Allow-Origin", "Content-Type",
+//            "Accept", "Authorization", "Origin, Accept", "X-Requested-With",
+//            "Access-Control-Request-Method", "Access-Control-Request-Headers"));
+//    corsConfiguration.setExposedHeaders(
+//        Arrays.asList("Origin", "Content-Type", "Accept", "Authorization",
+//            "Access-Control-Allow-Origin", "Access-Control-Allow-Origin",
+//            "Access-Control-Allow-Credentials"));
+//    corsConfiguration.setAllowedMethods(Arrays.asList(
+//        "GET", "POST", "PUT", "DELETE", "OPTIONS"));
+//    final UrlBasedCorsConfigurationSource urlBasedCors =
+//        new UrlBasedCorsConfigurationSource();
+//    urlBasedCors.registerCorsConfiguration(
+//        "/**", corsConfiguration);
+//    return new CorsFilter(urlBasedCors);
+//  }
 }
